# Chythm

./: CMakeLists.txt  How_to_make_a_chart.md  ProjectRequirements.md  README.md
chart_editor/: Editor  Editor.c  Editor.h  README.md  notes.json
inc/: Application.h  Button.h  Const.h  Constants.h  Dependency.h  Drawer.h  Effect.h  EndScene.h  Event.h  GameScene.h  Global.h  Globals.h  HitPoint.h  Lane.h  List.h  LoadScene.h  MenuScene.h  Note.h  PauseScene.h  Scene.h  SelectScene.h  SoundTrack.h  Timer.h  Utility.h
saves/hard/: chart.json  score.txt
saves/long_test/: chart.json  score.txt
saves/normal/: chart.json  score.txt
saves/single_test/: chart.json  score.txt
saves/test/: SoundTracks.txt  chart.json  config.conf  score.txt
saves/tutorial/: chart.json  score.txt
src/: Application.c  Button.c  Const.c  Constants.c  Drawer.c  Effect.c  EndScene.c  Event.c  GameScene.c  Globals.c  HitPoint.c  Lane.c  List.c  LoadScene.c  MenuScene.c  Note.c  PauseScene.c  Scene.c  SelectScene.c  SoundTrack.c  Timer.c  cJSON.c  main.c
